# that-sounds-like

./: .gitignore  Makefile  PROJECT_STATUS_AND_ROADMAP.md  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: benchmark_v1.yaml
configs/models/: mert330.yaml  mert95.yaml  music2vec.yaml  stats.yaml
configs/profiles/: baseline_v1.yaml  multiscale_v1.yaml
data/eval/: human_triplets.csv  named_queries.csv
notebooks/: 01_model_benchmark.ipynb  02_query_analysis.ipynb
src/thatsoundslike/: __init__.py  __main__.py  cli.py  presentation.py  settings.py
src/thatsoundslike/audio/: __init__.py  decode.py  pooling.py  segment.py
src/thatsoundslike/embeddings/: __init__.py  build_segment_vectors.py  build_song_vectors.py  storage.py
src/thatsoundslike/eval/: benchmark.py  datasets.py  metrics.py  named_queries.py  workflows.py
src/thatsoundslike/ingest/: __init__.py  canonicalize.py  manifest.py  metadata.py  raw_library.py
src/thatsoundslike/models/: base.py  mert.py  music2vec.py  registry.py
src/thatsoundslike/reports/: html.py  markdown.py
src/thatsoundslike/retrieval/: centroid.py  cosine.py  explanations.py  pairwise.py
tests/: helpers.py  test_benchmark.py  test_canonicalize.py  test_embeddings.py  test_manifest.py  test_models.py  test_named_queries.py  test_pooling.py  test_presentation.py  test_retrieval.py  test_scan_raw.py  test_segmenting.py  test_settings.py  test_workflows.py
tests/fixtures/: README.md
